# aws-ses-relay

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/iam/: dlq-send-policy.json  idempotency-policy.json  lambda-execution-policy.json
deploy/s3/: inbound-bucket-policy.json  lifecycle-combined.json  lifecycle-idempotency.json  lifecycle.json
docs/: DEPLOY.md
docs/diagrams/: README.md
docs/diagrams/src/: how-it-works.mmd  processing-sequence.mmd  verdict-gate.mmd
docs/social-preview/: README.md  card.html
src/: config.rs  event.rs  forward.rs  handler.rs  idempotency.rs  main.rs
